--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.1.130</domain>
+        <domain includeSubdomains="true">192.168.7.95</domain>
         <!-- This matches the IP address in your NetworkModule.kt -->
         <!-- You can add multiple domain entries if needed -->
     </domain-config>
